changed styling to ensure that inputs don't overflow their parent in smaller screens

--- a/styles/stylish.css
+++ b/styles/stylish.css
@@ -14,13 +14,15 @@ input {
     padding: 20px 20px 20px 20px;
     font-size: 1.5rem;
     font-weight: bold;
+    min-width: 0;
+    max-width: 80%;
 }
 
 .centerIt {
     border: solid #6777ee 5px;
     text-align: center;
     background-color: #d3f6f3;
-    width: 40%;
+    width: 50%;
     margin: auto;
     left: 0;
     right: 0;
